--- a/lessons/misc-r/full-R-bootcamp/R-basics/02-data-structures.Rmd
+++ b/lessons/misc-r/full-R-bootcamp/R-basics/02-data-structures.Rmd
@@ -1,5 +1,5 @@
 
-# Undestanding basic data types in R
+# Understanding basic data types in R
 
 * To make the best of the R language, you'll need a strong understanding of the basic data types and data structures and how to operate on those.
 
@@ -44,9 +44,9 @@ z <- c(1L, 2L, 3L)
 typeof(z)
 ```
 
-R also has many data structures. These include
+R has many data structures. These include
 
-* vector
+* atomic vector
 * list
 * matrix
 * data frame
@@ -55,27 +55,26 @@ R also has many data structures. These include
 
 
 ### Vectors
-A vector is the most common and basic data structure in `R` and is pretty much the workhorse of R. Vectors can be of two types:
+A vector is the most common and basic data structure in `R` and is pretty much the workhorse of R. Technically, vectors can be one of two types:
 
 * atomic vectors
 * lists
 
-**Atomic Vectors**
-A vector can be a vector of `characters`, `logical`, `integers`or `numeric`.
+although the term "vector" most commonly refers to the atomic type not lists.
 
-Create an empty vector with `vector()` (By default the mode is `logical`. You can be more explicit as shown in the examples below.)
+**Atomic Vectors**
+A vector can be a vector of elements that are most commonly `character`, `logical`, `integer` or `numeric`.
+
+You can create an empty vector with `vector()` (By default the mode is `logical`. You can be more explicit as shown in the examples below.) It is more common to use direct constructors such as `character()`, `numeric()` etc.
 
 ```{r, eval = TRUE}
 x <- vector()
-# with a pre-defined length
-x <- vector(length = 10)
 # with a length and type
 vector("character", length = 10)
-vector("numeric", length = 10)
-vector("integer", length = 10)
-vector("logical", length = 10)
+character(5) ## character vector of length 5
+numeric(5)
+logical(5)
 ```
-The general pattern is `vector(mode of object, length)`.  You can also create vectors by concactenating items using the `c()` function.
 
 Various examples:
 
@@ -84,7 +83,7 @@ x <- c(1, 2, 3)
 x
 length(x)
 ```
-x is a numeric vector. These are the most common kind. They are numeric objects and are treated as double precision real numbers. To explicitly create integers, add a `L` at the end.
+`x` is a numeric vector. These are the most common kind. They are numeric objects and are treated as double precision real numbers. To explicitly create integers, add a `L` at the end.
 
 ```{r, eval = TRUE}
 x1 <- c(1L, 2L, 3L)
@@ -125,7 +124,6 @@ More examples of vectors
 ```{r, eval = TRUE}
 x <- c(0.5, 0.7)
 x <-c (TRUE, FALSE)
-x <- c(T, F)
 x <- c("a", "b", "c", "d", "e")
 x <- 9:100
 x <- c(1+0i, 2+4i)
@@ -211,7 +209,7 @@ as.character(x)
 as.complex(x) 
 ```
 
-Sometimes coercions, especially nonsensical ones won’t work.
+Sometimes coercions, especially nonsensical ones, won’t work.
 
 ```{r, eval = TRUE}
 x <- c("a", "b", "c")
@@ -230,7 +228,7 @@ as.logical(x)
 
 ## Matrix
 
-Matrices are a special vector in R. They are not a separate class of object but simply a vector but now with dimensions added on to it. Matrices have rows and columns. 
+Matrices are a special vector in R. They are not a separate type of object but simply an atomic vector with dimensions added on to it. Matrices have rows and columns. 
 
 ```{r, eval = TRUE}
 m <- matrix(nrow = 2, ncol = 2)
@@ -238,7 +236,7 @@ m
 dim(m)
 ```
 
-Matrices are constructed columnwise. 
+Matrices are filled column-wise. 
 
 ```{r, eval = TRUE}
 m <- matrix(1:6, nrow = 2, ncol = 3)
@@ -277,14 +275,13 @@ mdat
 
 ## List
 
-In R lists act as containers. Unlike atomic vectors, its contents are not restricted to a single mode and can encompass any data type. Lists are sometimes called recursive vectors, because a list can contain other lists. This makes them fundamentally different from atomic vectors. 
+In R lists act as containers. Unlike atomic vectors, the contents of a list are not restricted to a single mode and can encompass any mixture of data types. Lists are sometimes called recursive vectors, because a list can contain other lists. This makes them fundamentally different from atomic vectors. 
 
-List is a special vector. Each element can be a different class.
+List is a special vector. Each element can be a different type.
 
 
 
-Create lists using `list` or coerce other objects using `as.list()`
-
+Create lists using `list()` or coerce other objects using `as.list()`
 
 ```{r, eval = TRUE}
 x <- list(1, "a", TRUE, 1+4i)
@@ -308,7 +305,7 @@ xlist
 what is the length of this object?
 what about its structure?
 
-List can contain as many lists nested inside.
+A list can contain many lists nested inside.
 
 ```{r, eval = TRUE}
 temp <- list(list(list(list())))
@@ -322,7 +319,6 @@ It doesn't print out like a vector. Prints a new line for each element.
 
 Elements are indexed by double brackets. Single brackets will still return a(nother) list.
 
-
 ---
 
 ## Factors
@@ -333,19 +329,17 @@ Factors can only contain pre-defined values.
 
 Factors are pretty much integers that have labels on them.  While factors look (and often behave) like character vectors, they are actually integers under the hood, and you need to be careful when treating them like strings. Some string methods will coerce factors to strings, while others will throw an error.
 
-Sometimes factors can be left unordered. Example: male, female
+Sometimes factors can be left unordered. Example: `male`, `female`.
 
-Other times you might want factors to be ordered (or ranked). Example: low, medium, high. 
-
+Other times you might want factors to be ordered (or ranked). Example: `low`, `medium`, `high`. 
 
 Underlying it's represented by numbers 1, 2, 3.
 
+They are better than using simple integer labels because factors are what are called self describing. `male` and `female` is more descriptive than `1`s and `2`s. Helpful when there is no additional metadata.
 
-They are better than using simple integer labels because factors are what are called self describing. male and female is more descriptive than 1s and 2s. Helpful when there is no additional metadata.
+Which is `male`? `1` or `2`? You wouldn't be able to tell with just integer data. Factors have this information built in.
 
-Which is male? 1 or 2? You wouldn't be able to tell with just integer data. Factors have this information built in.
-
-Factors can be created with `factor()`. Input is a character vector.
+Factors can be created with `factor()`. Input is generally a character vector.
 
 ```
 x <- factor(c("yes", "no", "no", "yes", "yes"))
@@ -356,30 +350,26 @@ x
 
 `unclass(x)` strips out the class information.
 
-In modeling functions, importnat to know whta baseline levels is.
+In modeling functions, important to know what the baseline levels is.
 This is the first factor but by default the ordering is determined by alphabetical order of words entered. You can change this by speciying the levels.
 
 ```
 x <- factor(c("yes", "no", "yes"), levels = c("yes", "no"))
 ```
+
 ## Data frame
 
-A data frame is a very important data type in R. It's pretty much the de facto data structure for most tabular data and what we use for statistics.
+A data frame is a very important data type in R. It's pretty much the *de facto* data structure for most tabular data and what we use for statistics.
 
-data frames can have additional attributes such as `rownames()`. This can be useful for annotating data, like subject_id or sample_id. But most of the time they are not used.
+Data frames can have additional attributes such as `rownames()`, which can be useful for annotating data, like subject_id or sample_id. But most of the time they are not used.
 
-e.g. `rownames()`
-useful for annotating data. subject names.
-other times they are not useful.
-
-* Data frames Usually created by `read.csv` and `read.table`.
+* Data frames Usually created by `read.csv()` and `read.table()`.
 
 * Can convert to `matrix` with `data.matrix()`
 
-* Coercion will force and not always what you expect.
+* Coercion will be forced and not always what you expect.
 
 * Can also create with `data.frame()` function.
-
 
 With and data frame, you can do `nrow(df)` and `ncol(df)`
 rownames are usually 1..n.
@@ -396,15 +386,15 @@ cbind(df, data.frame(z = 4))
 When you combine column wise, only row numbers need to match. If you are adding a vector, it will get repeated.
 
 **Useful functions**  
-* `head()` - see first 5 rows
-* `tail()` - see last 5 rows
+* `head()` - see first 6 rows
+* `tail()` - see last 6 rows
 * `dim()` - see dimensions
 * `nrow()` - number of rows
 * `ncol()` - number of columns
 * `str()` - structure of each column
-* `names()` - will list column names for a data.frame (or any object really).
+* `names()` - will list the `names` attribute for a data frame (or any object really), which gives the column names.
 
-A data frame is a special type of list where every element of a list has same length.
+A data frame is a special type of list where every element of the list has same length.
 
 See that it is actually a special list:
 
@@ -412,12 +402,12 @@ See that it is actually a special list:
     [1] TRUE
     > class(iris)
     [1] "data.frame"
-     > 
+    > 
 --
 
-**Naming objects**  
+**Naming objects**
 
-Other R objects can also have names not just true for data.frames. Adding names is helpful since it's useful for readable code and self describing objects.
+Other R objects can also have names not just true for data frames. Adding names is helpful since it's useful for readable code and self describing objects.
 
 ```{r, eval = TRUE}
 x <- 1:3
@@ -442,6 +432,7 @@ dimnames(m) <- list(c("a", "b"), c("c", "d"))
 # second element = colnames
 m
 dimnames(m)
+colnames(m) ## or rownames(m)
 ```
 
 ---
@@ -449,7 +440,7 @@ dimnames(m)
 
 ## Missing values
 
-dennoted by `NA` and/or `NaN` for undefined mathematical operations.
+Denoted by `NA` and/or `NaN` for undefined mathematical operations.
 
 ```{r, eval = FALSE}
 is.na()
@@ -458,25 +449,27 @@ is.nan()
 
 check for both.
 
-NA values have a class. So you can have both an integer NA and a missing character NA.
+NA values have a class. So you can have both an integer NA (`NA_integer_`) and a character NA (`NA_character_`).
 
-Nan is also NA. But not the other way around.
+`NaN` is also `NA`. But not the other way around.
 
 ```{r, eval = TRUE}
 x <- c(1,2, NA, 4, 5)
 x
 ```
 
-`is.na(x)` returns logical.
-shows third
+```{r, eval = TRUE}
+is.na(x) # returns logical
+# shows third
 
-`is.nan(x)`
- # none are NaN.
+is.nan(x)
+# none are NaN
+```
 
 ```{r, eval = TRUE}
 x <- c(1,2, NA, NaN, 4, 5)
 is.na(x)
-#shows 2 TRUE.
+# shows 2 TRUE
 is.nan(x)
 # shows 1 TRUE
 ```
